# mutest-rs

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  build.json  default.nix  patch  rust-toolchain.toml
cargo-mutest/: Cargo.toml  build.rs
cargo-mutest/src/: main.rs
mutest/: Cargo.toml
mutest-artifact-test/: Cargo.toml
mutest-artifact-test/src/: main.rs
mutest-driver/: Cargo.toml  build.rs
mutest-driver/src/: cargo_package_config.rs  cli.rs  config.rs  inject.rs  lib.rs  main.rs  print.rs  write.rs
mutest-driver/src/passes/: analysis.rs  compilation.rs  mod.rs
mutest-emit/: Cargo.toml
mutest-emit/src/: context.rs  context_old.rs  lib.rs  session.rs
mutest-emit/src/analysis/: ast_lowering.rs  call_graph.rs  diagnostic.rs  hir.rs  item_visitor.rs  mod.rs  res.rs  tests.rs  ty.rs
mutest-emit/src/codegen/: annotation.rs  ast.rs  attr.rs  cancellation.rs  entry_point.rs  expansion.rs  harness.rs  hygiene.rs  mod.rs  mutation.rs  substitution.rs  symbols.rs  tests.rs  tool_attr.rs
mutest-emit/src/experiments/: mod.rs  test_mutator.rs  type_printer.rs
mutest-inspector/: Cargo.toml  build.rs
mutest-inspector/src/: call_graph.rs  config.rs  ctxt.rs  evaluation.rs  lib.rs  main.rs  metadata.rs  server.rs  source_file.rs  syntax_highlight.rs
mutest-inspector/src/html/: base.rs  mod.rs  mutations.rs
mutest-inspector/src/static/: THIRD_PARTY_LICENSES.md  styles.css
mutest-json/: Cargo.toml
mutest-json/src/: call_graph.rs  evaluation.rs  evaluation_stream.rs  lib.rs  mutations.rs  tests.rs  timings.rs
mutest-json/src/data_structures/: idx.rs  mod.rs
mutest-mutators/: Cargo.toml
mutest-mutators/src/: lib.rs  replace_arg_with_default.rs
mutest-runtime/: Cargo.toml  build.rs
mutest-runtime/src/: annotation.rs  config.rs  detections.rs  flakiness.rs  harness.rs  lib.rs  metadata.rs  substitution.rs  subsumption.rs  test_runner.rs  thread_pool.rs  write.rs
mutest-runtime/src/data_structures/: mod.rs  static_bit_matrix.rs  test_array.rs
mutest/src/: main.rs
test-metadata-shim/: Cargo.toml
test-metadata-shim/src/: lib.rs
tests/: Cargo.toml
tests/src/: diff.rs  main.rs
tests/ui/: avoid_mutating_test_helpers.rs  avoid_mutating_test_helpers.stdout  ignore_test_cases.rs  ignore_test_cases.stdout  ty_printing.rs  warn_on_edition_2015.rs  warn_on_edition_2015.stderr  warn_on_edition_2015.stdout
tests/ui/args/: ignore_explicit_call_graph_depth_arg_if_mutation_depth_exceeds_it.rs  ignore_explicit_call_graph_depth_arg_if_mutation_depth_exceeds_it.stderr  ignore_explicit_call_graph_depth_limit_arg_if_mutation_depth_exceeds_it.rs  ignore_explicit_call_graph_depth_limit_arg_if_mutation_depth_exceeds_it.stderr  ignore_explicit_call_graph_trace_length_limit_arg_if_mutation_depth_exceeds_it.rs  ignore_explicit_call_graph_trace_length_limit_arg_if_mutation_depth_exceeds_it.stderr  use_mutation_depth_as_call_graph_depth_if_unspecified.rs
tests/ui/ast_lowering/: anon_const.rs  assigns.rs  assoc_item_constraints.rs  async.rs  format_args.rs  generic_args.rs  generic_bounds.rs  generic_params.rs  generics.rs  lifetimes.rs  paths.rs  pats.rs  skip_implicit_lifetime_generic_args.rs  ty_alias_after_where_clause.rs
tests/ui/call_graph/: avoid_counting_direct_cycles.rs  avoid_counting_direct_cycles.stdout  avoid_counting_indirect_cycles.rs  avoid_counting_indirect_cycles.stdout  avoid_targeting_skipped_fn_containing_non_skipped_closure.rs  avoid_targeting_skipped_fn_containing_non_skipped_closure.stdout  closure.rs  closure.stdout  ignore_allocator_intrinsics_calls.rs  ignore_intrinsics_calls.rs  implicit_bin_op_call.rs  implicit_bin_op_call.stdout  implicit_drop_call.rs  implicit_drop_call.stdout  implicit_eq_call.rs  implicit_eq_call.stdout  implicit_index_op_call.rs  implicit_index_op_call.stdout  implicit_iterator_call.rs  implicit_iterator_call.stdout  implicit_ord_call.rs  implicit_ord_call.stdout  implicit_un_op_call.rs  implicit_un_op_call.stdout  local_callee_through_non_local_call.rs  local_callee_through_non_local_call.stdout  local_impl_call_of_non_local_def.rs  local_impl_call_of_non_local_def.stdout  no_top_level_calls.rs  no_top_level_calls.stdout  only_print_filtered_tests.rs  only_print_filtered_tests.stdout  retain_deeper_call_paths.rs  retain_deeper_call_paths.stdout  retain_deeper_recursive_call_paths.rs  retain_deeper_recursive_call_paths.stdout  retain_even_deeper_call_paths.rs  retain_even_deeper_call_paths.stdout  single_call_edge_per_def_instance.rs  single_call_edge_per_def_instance.stdout  (+21 more)
tests/ui/entry_points/: bin_with_main.rs  bin_with_main.stdout  crate_without_main.rs  crate_without_main.stdout  no_harness.rs  no_harness.stdout
tests/ui/evaluation/: basic_run.rs  basic_run.stdout  batched_run.rs  batched_run.stdout  cancel_timed_out_test_if_reenters_subst.rs  cancel_timed_out_test_if_reenters_subst.stdout  empty_run.rs  empty_run.stdout  failing_run.rs  failing_run.stdout  parallel_run.rs  parallel_run.stdout  parallel_run_requires_thread_pool.rs  parallel_run_requires_thread_pool.stdout
tests/ui/harness/: cap_lints.rs  cap_lints_recompilable_dep_crate.rs  error_on_generated_mod_conflict.rs  error_on_generated_mod_conflict.stderr  override_user_with_harness_attributes.rs
tests/ui/hygiene/: aliased_struct_expr_pat.rs  anon_const.rs  assignments.rs  assoc_path_to_items_in_inherent_impls.rs  assoc_path_with_anonymous_infer_only_ty_in_self_ty.rs  assoc_path_with_nested_projection_in_self_ty.rs  assoc_ty_implicit_supertrait_generic_args.rs  assoc_ty_implicit_supertrait_path_struct_expr_pat.rs  assoc_ty_path_struct_expr_pat.rs  assoc_ty_qualified_path_struct_expr_pat.rs  async.rs  avoid_ambiguous_assoc_through_projection_ty.rs  avoid_naming_ctors.rs  avoid_naming_synthetic_generics.rs  builtins.rs  captured_items.rs  captured_locals.rs  const.rs  ctor_generics.rs  derive_builtins.rs  embed_non_macro_items.rs  extern_crate_reexport.rs  extern_crates.rs  fields.rs  flatten_multizip.rs  impl_relative_paths.rs  items_in_assoc_item.rs  items_in_impls.rs  jseyfried_rfc_def.rs  jseyfried_rfc_use.rs  keep_generic_args.rs  (+39 more)
(+198 files in other folders)
