[workspace]
resolver = "3"
members = [
    "cargo-mutest",
    "mutest-driver",
    "mutest-driver-cli",
    "mutest-emit",
    "mutest-json",
    "mutest-operators",
    "mutest-runtime",
    "mutest-runtime-embedded-target-stub",
    "mutest-runtime-embedded-host-driver",
    "test-metadata-shim",
    "tests",
]
