# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "cargo-mutest"
description = "Mutation testing tools for Rust."
version = "0.0.0"
edition = "2021"

[dependencies]
mutest-driver = { path = "../mutest-driver" }
mutest-operators = { path = "../mutest-operators" }

cargo_metadata = "0.18"
clap = { version = "4", features = ["cargo"] }

[features]
default = ["random"]
random = ["mutest-driver/random"]
