# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "cargo-mutest"
description = "Mutation testing tools for Rust."
version = "0.0.0"
edition = "2024"

[dependencies]
mutest-driver-cli = { path = "../mutest-driver-cli" }
mutest-driver = { path = "../mutest-driver" }
mutest-operators = { path = "../mutest-operators" }

cargo_metadata = "0.20"
clap = { version = "4", features = ["cargo"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
