# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "cargo-mutest"
version = "0.0.0"
authors = ["Zalán Bálint Lévai"]
description = "Mutation testing tools for Rust."
keywords = ["mutation", "mutation-analysis", "mutation-testing", "testing"]
categories = ["development-tools::testing", "development-tools::cargo-plugins", "security"]
homepage = "https://mutest.rs"
repository = "https://github.com/zalanlevai/mutest-rs"
license = "Apache-2.0 OR MIT"
edition = "2024"

[dependencies]
mutest-driver-cli = { path = "../mutest-driver-cli" }
mutest-operators = { path = "../mutest-operators" }

cargo_metadata = "0.21"
clap = { version = "4", features = ["cargo"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
