# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "mutest-driver"
version = "0.0.0"
edition = "2024"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
mutest-driver-cli = { path = "../mutest-driver-cli" }
mutest-emit = { path = "../mutest-emit" }
mutest-json = { path = "../mutest-json", features = ["rustc"] }
mutest-operators = { path = "../mutest-operators" }

clap = { version = "4", features = ["cargo"] }

serde = "1.0"
serde_json = "1.0"

rand = "0.9"
rand_seeder = "0.4"

[build-dependencies]
cargo_metadata = "0.21"

[features]
default = []
embed-runtime = []
