# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "mutest-driver"
version = "0.0.0"
authors = ["Zalán Bálint Lévai"]
description = "Mutation testing tools for Rust."
keywords = ["mutation", "mutation-analysis", "mutation-testing", "testing"]
categories = ["development-tools::testing", "development-tools::cargo-plugins", "security"]
homepage = "https://mutest.rs"
repository = "https://github.com/zalanlevai/mutest-rs"
license = "Apache-2.0 OR MIT"
edition = "2024"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
mutest-driver-cli = { path = "../mutest-driver-cli" }
mutest-emit = { path = "../mutest-emit" }
mutest-json = { path = "../mutest-json", features = ["rustc"] }
mutest-operators = { path = "../mutest-operators" }

clap = { version = "4", features = ["cargo"] }

cargo_metadata = "0.23"

serde = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1"
serde-untagged = "0.1"

rand = "0.9"
rand_seeder = "0.4"

[build-dependencies]
cargo_metadata = "0.23"

[features]
default = []
embed-runtime = []
