# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "mutest-emit"
version = "0.0.0"
authors = ["Zalán Bálint Lévai"]
description = "Program analysis and code generation core of mutest-rs."
keywords = ["mutation", "mutation-analysis", "mutation-testing", "testing"]
categories = ["development-tools::testing", "development-tools::cargo-plugins", "security"]
homepage = "https://mutest.rs"
repository = "https://github.com/zalanlevai/mutest-rs"
license = "Apache-2.0 OR MIT"
edition = "2024"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
rand = "0.9"
