# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "mutest-inspector"
version = "0.0.0"
authors = ["Zalán Bálint Lévai"]
description = "Interactive mutation inspector for mutest-rs."
keywords = ["mutation", "mutation-analysis", "mutation-testing", "testing"]
categories = ["development-tools::testing", "development-tools::cargo-plugins", "security"]
homepage = "https://mutest.rs"
repository = "https://github.com/zalanlevai/mutest-rs"
license = "Apache-2.0 OR MIT"
edition = "2024"

[dependencies]
mutest-json = { path = "../mutest-json" }

clap = { version = "4", features = ["cargo"] }
color-print = "0.3"

serde = "1.0"
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
axum = "0.8"
memory-serve = "2"

tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"

pulldown-cmark-escape = "0.11"

opener = "0.8"

[build-dependencies]
memory-serve = "2"

[features]
standalone = ["embed-static-files"]
embed-static-files = []
