# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "mutest-mutators"
version = "0.0.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
mutest-bridge = { path = "../mutest-bridge" }
mutest-emit = { path = "../mutest-emit" }
mutest-mutations = { path = "../mutest-mutations" }
