# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "mutest-runtime"
version = "0.0.0"
edition = "2021"

# FIXME: rustc requires libraries in the search path to be in rlib format. Once proper dependency
#        resolution in generated code is implemented, cargo might be able to inject the crate for us.
[lib]
crate-type = ["rlib"]

[dependencies]
mutest-json = { path = "../mutest-json" }

phf = { version = "0.11.2", features = ["macros"], default-features = false }
atomic-wait = "1.1"

serde = "1.0"
serde_json = "1.0"

[build-dependencies]
cargo_metadata = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
