# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "test-metadata-shim"
version = "0.0.0"
authors = ["Zalán Bálint Lévai"]
description = "Crate shim for the metadata types in libtest, supporting no_std environments."
keywords = ["testing"]
categories = ["development-tools::testing", "security"]
homepage = "https://mutest.rs"
repository = "https://github.com/zalanlevai/mutest-rs"
license = "Apache-2.0 OR MIT"
edition = "2024"

[dependencies]
