# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "mutest-tests"
version = "0.0.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.18"
path-slash = "0.2"
clap = { version = "4", features = ["cargo"] }
similar = { version = "2", features = ["inline"] }
